# obs-ffmpeg-encoder

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.MD  appveyor.yml
.github/workflows/: main.yml
ci/: appveyor-build.bat  appveyor-build.js  appveyor-package.bat  builder.js
cmake/: cppcheck.cmake  installer.iss.in  util.cmake  version.hpp.in
data/locale/: en-US.ini
source/: encoder.cpp  encoder.hpp  generic.cpp  generic.hpp  plugin.cpp  plugin.hpp  strings.hpp  utility.cpp  utility.hpp
source/codecs/: h264.cpp  h264.hpp  hevc.cpp  hevc.hpp
source/encoders/: generic.cpp  generic.hpp  prores_aw.cpp  prores_aw.hpp
source/ffmpeg/: avframe-queue.cpp  avframe-queue.hpp  swscale.cpp  swscale.hpp  tools.cpp  tools.hpp
source/hwapi/: base.hpp  d3d11.cpp  d3d11.hpp
source/ui/: debug_handler.cpp  debug_handler.hpp  handler.cpp  handler.hpp  libvpx_vp9_handler.cpp  libvpx_vp9_handler.hpp  nvenc_h264_handler.cpp  nvenc_h264_handler.hpp  nvenc_hevc_handler.cpp  nvenc_hevc_handler.hpp  nvenc_shared.cpp  nvenc_shared.hpp  prores_aw_handler.cpp  prores_aw_handler.hpp
